First adaptation for the script library: handling legacy url schemes; initial scripts controller.

--- a/html/.htaccess
+++ b/html/.htaccess
@@ -1,11 +1,9 @@
 
 Options +FollowSymLinks +ExecCGI
 
-AddHandler cgi-script .cgi
-
 RewriteEngine On
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^.*$ /cgi-bin/library.cgi [QSA,L]
-RewriteRule ^$ /cgi-bin/library.cgi [QSA,L]
+RewriteRule ^.*$ /cgi-bin/library.r [QSA,L]
+RewriteRule ^$ /cgi-bin/library.r [QSA,L]
 
